--- a/public/styles.css
+++ b/public/styles.css
@@ -44,6 +44,15 @@ body {
   display: flex;
   justify-content: space-between;
 }
+.LastMessage_container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size:  35px;
+  color: red;
+}
 
 @keyframes fade {
   from {
